// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoActiveContent should render correctly 1`] = `
<DocumentFragment>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 eWWtzz"
  >
    <div
      class="ant-space-item"
    >
      <svg
        class="styledComponents__GreenTickIcon-sc-m7jeli-6 dutgAg"
        data-testid="CheckMarkCircleSolid"
      />
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
  >
    <div
      class="ant-space-item"
    >
      No active data
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoActiveContent should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 eWWtzz"
  >
    <div
      class="ant-space-item"
    >
      <svg
        class="styledComponents__GreenTickIcon-sc-m7jeli-6 dutgAg"
        data-testid="CheckMarkCircleSolid"
      />
    </div>
  </div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
  >
    <div
      class="ant-space-item"
    >
      No data available
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoActiveData should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 eWWtzz"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__GreenTickIcon-sc-m7jeli-6 dutgAg"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
    >
      <div
        class="ant-space-item"
      >
        No active data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoActiveData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 eWWtzz"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__GreenTickIcon-sc-m7jeli-6 dutgAg"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
    >
      <div
        class="ant-space-item"
      >
        No data available
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoAiOpsLicense should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoAILicenseWrapper-sc-m7jeli-2 eSkonA"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 eWWtzz"
      style="padding-top: 50px;"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__NoLicensesIcon-sc-m7jeli-9"
          data-testid="NoData"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__NoLicenseTextWrapper-sc-m7jeli-4 xTDdT"
    >
      <div
        class="ant-space-item"
      >
        No license
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
      style="padding-bottom: 100px;"
    >
      <div
        class="ant-space-item"
      >
        RUCKUS AI cannot analyse your zone due to inadequate licenses. Please ensure you have licenses fully applied for the zone for AI Operations optimizations.
      </div>
    </div>
    <button
      class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 kBDiup styledComponents__LicenseButton-sc-m7jeli-8 kthOJg"
      type="button"
    >
      <span>
        Update my licenses
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`NoData should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
    >
      <div
        class="ant-space-item"
      >
        No data to display
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoDataWrapper-sc-m7jeli-0 bvtRvB"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
    >
      <div
        class="ant-space-item"
      >
        No data available
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NoRecommendationData should render correctly with the prop 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__NoRecommendationDataWrapper-sc-m7jeli-1 bEBLFa"
    style="margin-top: 0px;"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 eWWtzz"
    >
      <div
        class="ant-space-item"
      >
        <svg
          class="styledComponents__LargeGreenTickIcon-sc-m7jeli-7 jQNFlg"
          data-testid="CheckMarkCircleSolid"
        />
      </div>
    </div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center styledComponents__TextWrapper-sc-m7jeli-3 styledComponents__NoDataTextWrapper-sc-m7jeli-5 eWWtzz iUuDTI"
    >
      <div
        class="ant-space-item"
      >
        Your network is already running in an optimal configuration and we dont have any AI Operations to recommend recently.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
